# linux-apps-using-gtk4-in-c-lanugage

./: 0-a-begineer-app  0-a-begineer-app.c  1-blank-window  1-blank-window.c  14-menu-quit-simple-program  14-menu-quit-simple-program.c  15-menu-colorChange-fullScreen-Quit-program  15-menu-colorChange-fullScreen-Quit-program.c  16-menu-colorChange-fullScreen-Quit-program-part2  16-menu-colorChange-fullScreen-Quit-program-part2.c  2-display-text  2-display-text.c  3-button  3-button.c  4-gtkbox-twobutton-container  4-gtkbox-twobutton-container.c  5-multiline-text-gtkTextBuffer-gtkTextView  5-multiline-text-gtkTextBuffer-gtkTextView.c  6-multiline-text-scroll-enabled  6-multiline-text-scroll-enabled.c  7-file-viewer  7-file-viewer.c  8-multiple-file-viewer-notebook  8-multiple-file-viewer-notebook.c  9-multiline-file-editor-edit-save-notebook-TfeTextView  9-multiline-file-editor-edit-save-notebook-TfeTextView.c  README.md  textTemp.txt
10-fileEditor-new-open-save-Button-UI-GtkBUilder-folder/: 10-fileEditor-new-open-save-Button-UI-GtkBUilder  10-fileEditor-new-open-save-Button-UI-GtkBUilder.c
13-fileEditor-new-open-save-Button-onclick-Functions-menu-font-pango-added/: 13-css.c  13-fileEditor-new-open-save-Button-onclick-Functions-in-TfeTextView-Functions.h  13-tfeapplication.c  13-tfenotebook.c  13-tfetextview.c  13-tfetextview.h  Makefile  meson.build  org.gtk.example.gschema.xml  tfe.gresource.xml
13-fileEditor-new-open-save-Button-onclick-Functions-menu-font-pango-added/ui/: 13-fileEditor-new-open-save-Button-onclick-Functions-in-TfeTextView-Functions.ui
(+18 files in other folders)
